--- a/CSS/reg-form.css
+++ b/CSS/reg-form.css
@@ -5,10 +5,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-/* body
+body
 {
     background-image: linear-gradient(90deg,#FF5F6D,#FFC371);
-} */
+}
 .box
 {
     width: 50%;
@@ -16,6 +16,12 @@
     margin: 140px auto;
     border: 2px solid #000;
     background-color: white;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 .header h1
 {
@@ -102,12 +108,6 @@ select option
     font-size: 1.3em;
    
 }
-
-.test2
-{
-    /* margin-left: 5px; */
-    /* padding-left: 10px; */
-}
 input[type=checkbox]
 {
   /* margin-left: 10px; */
@@ -116,7 +116,20 @@ input[type=checkbox]
 }
 input[type=submit]
 {
-    margin-top: 10px;
-  /* margin-left: 10px; */
-  width: 100%;
+  margin-top: 10px;
+  /*margin-left: 10px;
+  */width: 100%;
+  height:30px;
+  background-color: royalblue;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
+input[type=submit]:hover
+{
+    background-color: black;
+    color: white;
+}
+
